--- a/digitala.html
+++ b/digitala.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>For Digitala</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --pastel-pink: #ffc9de;
-            --pastel-purple: #d5cfff;
-            --pastel-blue: #cce7ff;
-            --pastel-green: #d8fdd3;
-            --pastel-yellow: #fff7cc;
+            --pastel-pink: #ffd1dc;
+            --pastel-purple: #e0bbf4;
+            --pastel-blue: #cce5ff;
+            --pastel-green: #d0f0c0;
+            --pastel-yellow: #fff5ba;
             --text-dark: #1c1c1c;
-            --glass-bg: rgba(255, 255, 255, 0.5);
+            --glass-bg: rgba(255, 255, 255, 0.3);
             --border-glow: rgba(255, 255, 255, 0.4);
-            --shadow-glow: rgba(213, 207, 255, 0.3);
+            --shadow-glow: rgba(0, 0, 0, 0.05);
         }
 
         * {
@@ -30,15 +30,27 @@
             height: 100%;
             scroll-behavior: smooth;
             font-family: 'Manrope', sans-serif;
-            background: linear-gradient(135deg, var(--pastel-pink), var(--pastel-yellow), var(--pastel-green), var(--pastel-blue), var(--pastel-purple));
-            background-size: 400% 400%;
-            animation: gradientFlow 15s ease infinite;
+            background: linear-gradient(135deg, var(--pastel-pink), var(--pastel-purple), var(--pastel-blue), var(--pastel-green), var(--pastel-yellow));
+            background-size: 300% 300%;
+            animation: pastelShift 20s ease infinite;
             overflow-x: hidden;
+            color: var(--text-dark);
+        }
+
+        @keyframes pastelShift {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         body {
             padding: 60px 20px;
-            color: var(--text-dark);
         }
 
         header {
@@ -61,7 +73,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 3px solid white;
-            box-shadow: 0 4px 12px rgba(255, 183, 197, 0.4);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
         }
 
         .title-text {
@@ -71,7 +83,7 @@
         h1 {
             font-size: 3.5rem;
             font-weight: 800;
-            background: linear-gradient(90deg, var(--pastel-purple), var(--pastel-blue), var(--pastel-green));
+            background: linear-gradient(90deg, var(--pastel-purple), var(--pastel-blue));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -79,7 +91,7 @@
         header p {
             font-size: 1.2rem;
             margin-top: 10px;
-            opacity: 0.75;
+            opacity: 0.8;
         }
 
         .services {
@@ -91,58 +103,40 @@
         .services h2 {
             text-align: center;
             font-size: 2.8rem;
-            color: #b084f9;
+            color: var(--pastel-purple);
             margin-bottom: 50px;
         }
 
         .service-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-            gap: 40px;
+            gap: 30px;
         }
 
         .service-card {
             background: var(--glass-bg);
+            backdrop-filter: blur(20px);
             border: 1px solid var(--border-glow);
-            backdrop-filter: blur(15px);
             padding: 30px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px var(--shadow-glow);
+            box-shadow: 0 10px 20px var(--shadow-glow);
             transition: transform 0.3s ease-in-out;
-            position: relative;
         }
 
         .service-card:hover {
             transform: scale(1.03);
-            box-shadow: 0 16px 36px rgba(213, 207, 255, 0.4);
-        }
-
-        .service-card:nth-child(1) {
-            background-color: #ffe0eb;
-        }
-
-        .service-card:nth-child(2) {
-            background-color: #e0f4ff;
-        }
-
-        .service-card:nth-child(3) {
-            background-color: #e4ffd9;
-        }
-
-        .service-card:nth-child(4) {
-            background-color: #fff9dc;
         }
 
         .service-card h3 {
-            font-size: 1.6rem;
-            color: #b084f9;
-            margin-bottom: 15px;
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+            color: var(--pastel-blue);
         }
 
         .service-card p {
             font-size: 1rem;
-            color: #333;
             line-height: 1.6;
+            color: #333;
         }
 
         .contact {
@@ -153,7 +147,7 @@
 
         .contact h2 {
             font-size: 2.4rem;
-            color: #b084f9;
+            color: var(--pastel-green);
             margin-bottom: 30px;
         }
 
@@ -165,25 +159,21 @@
         }
 
         .contact-links a {
-            background: linear-gradient(to right, #fcb3d4, #d5cfff);
-            color: #1c1c1c;
+            background: var(--pastel-yellow);
+            color: #333;
             text-decoration: none;
             padding: 14px 28px;
-            border-radius: 40px;
+            border-radius: 30px;
             font-weight: 600;
-            letter-spacing: 0.4px;
-            transition: all 0.3s ease;
+            letter-spacing: 0.3px;
+            transition: 0.3s ease;
             position: relative;
             overflow: hidden;
         }
 
         .contact-links a:hover {
-            background: linear-gradient(to right, #cce7ff, #ffe0eb);
-        }
-
-        .contact-links a span {
-            position: relative;
-            z-index: 1;
+            background: var(--pastel-pink);
+            color: #000;
         }
 
         footer {
@@ -198,24 +188,9 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
-
             to {
                 opacity: 1;
                 transform: translateY(0);
-            }
-        }
-
-        @keyframes gradientFlow {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
             }
         }
 
@@ -225,23 +200,8 @@
                 text-align: center;
             }
 
-            header p {
-                text-align: center;
-            }
-
             .logo-title {
                 flex-direction: column;
-                align-items: center;
-            }
-
-            .title-text {
-                align-items: center;
-                justify-content: center;
-            }
-
-            .logo {
-                width: 70px;
-                height: 70px;
             }
         }
     </style>
@@ -252,7 +212,7 @@
     <!-- ==== Header ==== -->
     <header>
         <div class="logo-title">
-            <img src="https://imgur.com/FXNRead.png" alt="Digitala Logo" class="logo" />
+            <img src="https://imgur.com/FXNRead.png" alt="Digitala Logo" class="logo">
             <div class="title-text">
                 <h1>For Digitala</h1>
                 <p>Where design meets perfection. Powered by Tala Chibli.</p>
@@ -266,23 +226,19 @@
         <div class="service-grid">
             <div class="service-card">
                 <h3>Graphic Design</h3>
-                <p>Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards (Invitations,
-                    Business), Advertisements, & Custom Design</p>
+                <p>Social media content, visual identity, cards, ads, and customized design to match your brand energy.</p>
             </div>
             <div class="service-card">
                 <h3>Web Development</h3>
-                <p>Building web pages, improving user interfaces for websites, and modifying and updating existing
-                    websites.</p>
+                <p>Creating, redesigning, and upgrading websites with clean UI and smooth UX.</p>
             </div>
             <div class="service-card">
-                <h3>Photoshop & Video Editing</h3>
-                <p>Professional photo editing (for characters, products...), promotional image design, video editing.
-                </p>
+                <h3>Editing Magic</h3>
+                <p>Photoshop perfection + high-impact video editing for characters, products, or promos.</p>
             </div>
             <div class="service-card">
-                <h3>Extra Services</h3>
-                <p>Create CV/Resume and Cover Letter, design portfolio, implement projects and presentations
-                    (Microsoft Office).</p>
+                <h3>Extras</h3>
+                <p>CVs, cover letters, PowerPoints, portfolios — I got you covered from start to finish.</p>
             </div>
         </div>
     </section>
