--- a/digitala.html
+++ b/digitala.html
@@ -5,20 +5,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>For Digitala</title>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --pink-main: #ffd1dc;
-      --pink-light: #ffe6ec;
-      --pink-deep: #f5a9b8;
-      --purple: #e0bbf4;
-      --blue: #e3f2fd;
-      --green: #f0fdf4;
-      --yellow: #fffce0;
+      --pink: #ffe0f0;
+      --hot-pink: #ff75b5;
+      --lavender: #e6d6ff;
+      --baby-blue: #d0f0ff;
+      --mint: #d6fff5;
+      --yellow: #fffad1;
       --text-dark: #2c2c2c;
-      --glass-bg: rgba(255, 240, 246, 0.6);
-      --border-glow: rgba(255, 182, 193, 0.4);
-      --shadow-glow: rgba(255, 182, 193, 0.2);
+      --white: #ffffff;
+      --glass: rgba(255, 255, 255, 0.4);
     }
 
     * {
@@ -27,58 +25,226 @@
       box-sizing: border-box;
     }
 
-    html,
     body {
-      height: 100%;
-      scroll-behavior: smooth;
       font-family: 'Manrope', sans-serif;
-      background: linear-gradient(135deg, var(--pink-main), var(--pink-light), var(--yellow));
-      background-size: 300% 300%;
-      animation: pastelFlow 15s ease infinite;
-      overflow-x: hidden;
+      background: linear-gradient(145deg, var(--pink), var(--lavender), var(--baby-blue), var(--mint), var(--yellow));
+      background-size: 400% 400%;
+      animation: pastelFlow 30s ease infinite;
       color: var(--text-dark);
+      padding: 60px 20px;
+      overflow-x: hidden;
     }
 
     @keyframes pastelFlow {
-      0% {
-        background-position: 0% 50%;
-      }
-
-      50% {
-        background-position: 100% 50%;
-      }
-
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    body {
-      padding: 60px 20px;
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     header {
       text-align: center;
       margin-bottom: 80px;
-      animation: fadeInUp 1.2s ease;
+      animation: fadeInUp 1s ease;
     }
 
     .logo-title {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
       gap: 20px;
-      flex-wrap: wrap;
     }
 
     .logo {
-      width: 80px;
-      height: 80px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid white;
-      box-shadow: 0 4px 12px var(--shadow-glow);
+      border: 3px solid var(--white);
+      box-shadow: 0 8px 24px rgba(255, 117, 181, 0.3);
     }
 
-    .title-text {
-      max-width: 500p
+    h1 {
+      font-size: 3rem;
+      font-weight: 800;
+      background: linear-gradient(90deg, var(--hot-pink), #d48eff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.85;
+    }
+
+    .services {
+      max-width: 1100px;
+      margin: 0 auto;
+      animation: fadeInUp 1.3s ease;
+    }
+
+    .services h2 {
+      font-size: 2.5rem;
+      text-align: center;
+      color: var(--hot-pink);
+      margin-bottom: 40px;
+    }
+
+    .service-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+    }
+
+    .service-card {
+      background: var(--glass);
+      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      padding: 25px;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      box-shadow: 0 12px 36px rgba(255, 117, 181, 0.25);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+    }
+
+    .service-card:hover {
+      transform: translateY(-5px) scale(1.03);
+      box-shadow: 0 18px 40px rgba(255, 117, 181, 0.35);
+    }
+
+    .service-card h3 {
+      font-size: 1.5rem;
+      color: var(--hot-pink);
+      margin-bottom: 10px;
+    }
+
+    .service-card p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #444;
+    }
+
+    .contact {
+      text-align: center;
+      margin-top: 100px;
+      animation: fadeInUp 1.6s ease;
+    }
+
+    .contact h2 {
+      font-size: 2.4rem;
+      color: var(--hot-pink);
+      margin-bottom: 30px;
+    }
+
+    .contact-links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .contact-links a {
+      background: var(--hot-pink);
+      color: white;
+      padding: 14px 28px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    .contact-links a:hover {
+      background: #ff5aa7;
+      transform: scale(1.05);
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 80px;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2.3rem;
+        text-align: center;
+      }
+
+      .logo {
+        width: 70px;
+        height: 70px;
+      }
+
+      .service-card {
+        padding: 20px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- ==== Header ==== -->
+  <header>
+    <div class="logo-title">
+      <img src="https://imgur.com/FXNRead.png" alt="Digitala Logo" class="logo">
+      <h1>For Digitala</h1>
+      <p>Where design meets perfection. Powered by Tala Chibli.</p>
+    </div>
+  </header>
+
+  <!-- ==== Services ==== -->
+  <section class="services">
+    <h2>My Services</h2>
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>Graphic Design</h3>
+        <p>Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards (Invitations,
+          Business), Advertisements, & Custom Design</p>
+      </div>
+      <div class="service-card">
+        <h3>Web Development</h3>
+        <p>Building web pages, improving user interfaces for websites, and modifying and updating existing
+          websites.</p>
+      </div>
+      <div class="service-card">
+        <h3>Photoshop & Video Editing</h3>
+        <p>Professional photo editing (for characters, products...), promotional image design, video editing.
+        </p>
+      </div>
+      <div class="service-card">
+        <h3>Extra Services</h3>
+        <p>Create CV/Resume and Cover Letter, design portfolio, implement projects and presentations
+          (Microsoft Office).</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ==== Contact ==== -->
+  <section class="contact">
+    <h2>Get in Touch</h2>
+    <div class="contact-links">
+      <a href="https://wa.me/71732045" target="_blank">WhatsApp</a>
+      <a href="https://www.instagram.com/4.digitala" target="_blank">Instagram</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 For Digitala. Site by Tala Chibli. All rights reserved.</p>
+  </footer>
+
+</body>
+
+</html>
