--- a/digitala.html
+++ b/digitala.html
@@ -8,15 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --pink: #ffe0f0;
-      --hot-pink: #ff75b5;
-      --lavender: #e6d6ff;
-      --baby-blue: #d0f0ff;
-      --mint: #d6fff5;
-      --yellow: #fffad1;
-      --text-dark: #2c2c2c;
-      --white: #ffffff;
-      --glass: rgba(255, 255, 255, 0.4);
+      --pink: #fcd6e5;
+      --purple: #e3d1f7;
+      --deep-purple: #b88aff;
+      --yellow: #fffacc;
+      --green: #d4fcd5;
+      --white-glass: rgba(255, 255, 255, 0.3);
+      --text-dark: #2a2a2a;
+      --shadow-glow: rgba(184, 138, 255, 0.3);
     }
 
     * {
@@ -25,113 +24,138 @@
       box-sizing: border-box;
     }
 
+    html,
     body {
+      height: 100%;
+      scroll-behavior: smooth;
       font-family: 'Manrope', sans-serif;
-      background: linear-gradient(145deg, var(--pink), var(--lavender), var(--baby-blue), var(--mint), var(--yellow));
+      background: linear-gradient(135deg, var(--pink), var(--purple), var(--yellow), var(--green));
       background-size: 400% 400%;
-      animation: pastelFlow 30s ease infinite;
+      animation: gradientShift 15s ease infinite;
+      overflow-x: hidden;
       color: var(--text-dark);
       padding: 60px 20px;
-      overflow-x: hidden;
     }
 
-    @keyframes pastelFlow {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    @keyframes gradientShift {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
 
     header {
       text-align: center;
       margin-bottom: 80px;
-      animation: fadeInUp 1s ease;
+      animation: fadeInUp 1.2s ease;
     }
 
     .logo-title {
       display: flex;
-      flex-direction: column;
       align-items: center;
+      justify-content: center;
       gap: 20px;
+      flex-wrap: wrap;
     }
 
     .logo {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid var(--white);
-      box-shadow: 0 8px 24px rgba(255, 117, 181, 0.3);
+      box-shadow: 0 4px 12px var(--shadow-glow);
+      border: 3px solid white;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       font-weight: 800;
-      background: linear-gradient(90deg, var(--hot-pink), #d48eff);
+      background: linear-gradient(90deg, var(--deep-purple), var(--purple));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
     header p {
-      font-size: 1.1rem;
-      opacity: 0.85;
+      font-size: 1.2rem;
+      margin-top: 10px;
+      opacity: 0.75;
     }
 
+    /* ==== Services ==== */
     .services {
-      max-width: 1100px;
+      max-width: 1200px;
       margin: 0 auto;
-      animation: fadeInUp 1.3s ease;
+      animation: fadeInUp 1.4s ease;
     }
 
     .services h2 {
-      font-size: 2.5rem;
       text-align: center;
-      color: var(--hot-pink);
-      margin-bottom: 40px;
+      font-size: 2.8rem;
+      color: var(--deep-purple);
+      margin-bottom: 50px;
     }
 
     .service-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+      gap: 40px;
     }
 
     .service-card {
-      background: var(--glass);
-      backdrop-filter: blur(20px);
+      background: var(--white-glass);
+      backdrop-filter: blur(16px);
       border-radius: 20px;
-      padding: 25px;
-      border: 1px solid rgba(255, 255, 255, 0.4);
-      box-shadow: 0 12px 36px rgba(255, 117, 181, 0.25);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 30px;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      box-shadow: 0 8px 24px var(--shadow-glow);
       position: relative;
+      transition: 0.3s ease;
+      overflow: hidden;
+    }
+
+    .service-card::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.08) 0%, transparent 60%);
+      animation: rotateLight 8s linear infinite;
     }
 
     .service-card:hover {
-      transform: translateY(-5px) scale(1.03);
-      box-shadow: 0 18px 40px rgba(255, 117, 181, 0.35);
+      transform: scale(1.03);
+      box-shadow: 0 16px 36px rgba(184, 138, 255, 0.35);
     }
 
     .service-card h3 {
-      font-size: 1.5rem;
-      color: var(--hot-pink);
-      margin-bottom: 10px;
+      font-size: 1.6rem;
+      color: var(--deep-purple);
+      margin-bottom: 15px;
     }
 
     .service-card p {
       font-size: 1rem;
       line-height: 1.6;
-      color: #444;
+      color: #333;
     }
 
+    /* ==== Contact ==== */
     .contact {
-      text-align: center;
       margin-top: 100px;
+      text-align: center;
       animation: fadeInUp 1.6s ease;
     }
 
     .contact h2 {
       font-size: 2.4rem;
-      color: var(--hot-pink);
+      color: var(--deep-purple);
       margin-bottom: 30px;
     }
 
@@ -143,42 +167,75 @@
     }
 
     .contact-links a {
-      background: var(--hot-pink);
+      background: var(--deep-purple);
       color: white;
-      padding: 14px 28px;
-      border-radius: 30px;
       text-decoration: none;
+      padding: 14px 28px;
+      border-radius: 40px;
       font-weight: 600;
+      letter-spacing: 0.4px;
+      position: relative;
+      overflow: hidden;
       transition: all 0.3s ease;
     }
 
-    .contact-links a:hover {
-      background: #ff5aa7;
-      transform: scale(1.05);
+    .contact-links a::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 0%;
+      left: 0;
+      bottom: 0;
+      background: #a76bff;
+      z-index: 0;
+      transition: 0.3s ease;
+    }
+
+    .contact-links a:hover::after {
+      height: 100%;
+    }
+
+    .contact-links a span {
+      position: relative;
+      z-index: 1;
     }
 
     footer {
-      text-align: center;
       margin-top: 80px;
+      text-align: center;
       font-size: 0.9rem;
       color: #666;
     }
 
+    /* Animations */
     @keyframes fadeInUp {
       from {
         opacity: 0;
         transform: translateY(30px);
       }
-
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
 
+    @keyframes rotateLight {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* Mobile Styles */
     @media (max-width: 600px) {
       h1 {
-        font-size: 2.3rem;
+        font-size: 2.5rem;
+      }
+
+      .logo-title {
+        flex-direction: column;
         text-align: center;
       }
 
@@ -186,26 +243,24 @@
         width: 70px;
         height: 70px;
       }
-
-      .service-card {
-        padding: 20px;
-      }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- ==== Header ==== -->
+  <!-- Header -->
   <header>
     <div class="logo-title">
-      <img src="https://imgur.com/FXNRead.png" alt="Digitala Logo" class="logo">
-      <h1>For Digitala</h1>
-      <p>Where design meets perfection. Powered by Tala Chibli.</p>
+      <img src="https://i.imgur.com/FXNRead.png" alt="Digitala Logo" class="logo">
+      <div>
+        <h1>For Digitala</h1>
+        <p>Where design meets perfection. Powered by Tala Chibli.</p>
+      </div>
     </div>
   </header>
 
-  <!-- ==== Services ==== -->
+  <!-- Services -->
   <section class="services">
     <h2>My Services</h2>
     <div class="service-grid">
@@ -232,12 +287,12 @@
     </div>
   </section>
 
-  <!-- ==== Contact ==== -->
+  <!-- Contact -->
   <section class="contact">
     <h2>Get in Touch</h2>
     <div class="contact-links">
-      <a href="https://wa.me/71732045" target="_blank">WhatsApp</a>
-      <a href="https://www.instagram.com/4.digitala" target="_blank">Instagram</a>
+      <a href="https://wa.me/71732045" target="_blank"><span>WhatsApp</span></a>
+      <a href="https://www.instagram.com/4.digitala" target="_blank"><span>Instagram</span></a>
     </div>
   </section>
 
@@ -246,5 +301,4 @@
   </footer>
 
 </body>
-
 </html>
