--- a/digitala.html
+++ b/digitala.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>For Digitala</title>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --pink: #fcd6e5;
-      --purple: #e3d1f7;
-      --deep-purple: #b88aff;
-      --yellow: #fffacc;
-      --green: #d4fcd5;
+      --pink-light: #fcd6e5;
+      --pink-deep: #f4a6c4;
+      --purple-light: #e3d1f7;
+      --purple-deep: #b88aff;
+      --blue-light: #c3d8f7;
+      --blue-deep: #6a88ff;
       --white-glass: rgba(255, 255, 255, 0.3);
       --text-dark: #2a2a2a;
-      --shadow-glow: rgba(184, 138, 255, 0.3);
+      --shadow-glow-pink: rgba(244, 166, 196, 0.3);
+      --shadow-glow-purple: rgba(184, 138, 255, 0.3);
+      --shadow-glow-blue: rgba(106, 136, 255, 0.3);
     }
 
     * {
@@ -29,7 +32,7 @@
       height: 100%;
       scroll-behavior: smooth;
       font-family: 'Manrope', sans-serif;
-      background: linear-gradient(135deg, var(--pink), var(--purple), var(--yellow), var(--green));
+      background: linear-gradient(135deg, var(--pink-light), var(--purple-light), var(--blue-light));
       background-size: 400% 400%;
       animation: gradientShift 15s ease infinite;
       overflow-x: hidden;
@@ -41,9 +44,11 @@
       0% {
         background-position: 0% 50%;
       }
+
       50% {
         background-position: 100% 50%;
       }
+
       100% {
         background-position: 0% 50%;
       }
@@ -68,14 +73,14 @@
       height: 80px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 4px 12px var(--shadow-glow);
+      box-shadow: 0 4px 12px var(--shadow-glow-pink);
       border: 3px solid white;
     }
 
     h1 {
       font-size: 3.5rem;
       font-weight: 800;
-      background: linear-gradient(90deg, var(--deep-purple), var(--purple));
+      background: linear-gradient(90deg, var(--pink-deep), var(--purple-deep));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -96,7 +101,7 @@
     .services h2 {
       text-align: center;
       font-size: 2.8rem;
-      color: var(--deep-purple);
+      color: var(--purple-deep);
       margin-bottom: 50px;
     }
 
@@ -112,7 +117,7 @@
       border-radius: 20px;
       padding: 30px;
       border: 1px solid rgba(255, 255, 255, 0.5);
-      box-shadow: 0 8px 24px var(--shadow-glow);
+      box-shadow: 0 8px 24px var(--shadow-glow-pink);
       position: relative;
       transition: 0.3s ease;
       overflow: hidden;
@@ -131,12 +136,12 @@
 
     .service-card:hover {
       transform: scale(1.03);
-      box-shadow: 0 16px 36px rgba(184, 138, 255, 0.35);
+      box-shadow: 0 16px 36px var(--shadow-glow-purple);
     }
 
     .service-card h3 {
       font-size: 1.6rem;
-      color: var(--deep-purple);
+      color: var(--purple-deep);
       margin-bottom: 15px;
     }
 
@@ -155,7 +160,7 @@
 
     .contact h2 {
       font-size: 2.4rem;
-      color: var(--deep-purple);
+      color: var(--purple-deep);
       margin-bottom: 30px;
     }
 
@@ -167,7 +172,7 @@
     }
 
     .contact-links a {
-      background: var(--deep-purple);
+      background: var(--purple-deep);
       color: white;
       text-decoration: none;
       padding: 14px 28px;
@@ -186,7 +191,7 @@
       height: 0%;
       left: 0;
       bottom: 0;
-      background: #a76bff;
+      background: var(--blue-deep);
       z-index: 0;
       transition: 0.3s ease;
     }
@@ -213,6 +218,7 @@
         opacity: 0;
         transform: translateY(30px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
@@ -223,6 +229,7 @@
       0% {
         transform: rotate(0deg);
       }
+
       100% {
         transform: rotate(360deg);
       }
@@ -252,7 +259,7 @@
   <!-- Header -->
   <header>
     <div class="logo-title">
-      <img src="https://i.imgur.com/FXNRead.png" alt="Digitala Logo" class="logo">
+      <img src="https://i.imgur.com/FXNRead.png" alt="Digitala Logo" class="logo" />
       <div>
         <h1>For Digitala</h1>
         <p>Where design meets perfection. Powered by Tala Chibli.</p>
@@ -266,23 +273,31 @@
     <div class="service-grid">
       <div class="service-card">
         <h3>Graphic Design</h3>
-        <p>Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards (Invitations,
-          Business), Advertisements, & Custom Design</p>
+        <p>
+          Social Media (Reels, Posts, Stories), Visual Identity (Logo, Mockups), Cards
+          (Invitations, Business), Advertisements, & Custom Design
+        </p>
       </div>
       <div class="service-card">
         <h3>Web Development</h3>
-        <p>Building web pages, improving user interfaces for websites, and modifying and updating existing
-          websites.</p>
+        <p>
+          Building web pages, improving user interfaces for websites, and modifying and
+          updating existing websites.
+        </p>
       </div>
       <div class="service-card">
         <h3>Photoshop & Video Editing</h3>
-        <p>Professional photo editing (for characters, products...), promotional image design, video editing.
+        <p>
+          Professional photo editing (for characters, products...), promotional image
+          design, video editing.
         </p>
       </div>
       <div class="service-card">
         <h3>Extra Services</h3>
-        <p>Create CV/Resume and Cover Letter, design portfolio, implement projects and presentations
-          (Microsoft Office).</p>
+        <p>
+          Create CV/Resume and Cover Letter, design portfolio, implement projects and
+          presentations (Microsoft Office).
+        </p>
       </div>
     </div>
   </section>
@@ -299,6 +314,6 @@
   <footer>
     <p>© 2025 For Digitala. Site by Tala Chibli. All rights reserved.</p>
   </footer>
-
 </body>
+
 </html>
