--- a/digitala.html
+++ b/digitala.html
@@ -5,20 +5,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>For Digitala</title>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --hot-pink: #ff007f;
-      --bright-purple: #9b30ff;
-      --vibrant-blue: #007bff;
-      --electric-orange: #ff6f00;
-      --sunshine-yellow: #ffea00;
-      --deep-blue: #0033cc;
+      --hot-pink: #d81e5b; /* deep fuchsia */
+      --soft-purple: #7b3fbf;
+      --cool-blue: #3458db;
+      --warm-orange: #f28c28;
+      --sunny-yellow: #f7d154;
 
       --text-light: #fff;
-      --shadow-hot-pink: rgba(255, 0, 127, 0.6);
-      --shadow-purple: rgba(155, 48, 255, 0.5);
-      --shadow-blue: rgba(0, 123, 255, 0.5);
+      --bg-dark: #1a1a1a;
+      --card-bg: #2a2a2a;
+
+      --shadow-pink: rgba(216, 30, 91, 0.35);
+      --shadow-purple: rgba(123, 63, 191, 0.3);
+      --shadow-blue: rgba(52, 88, 219, 0.3);
     }
 
     * {
@@ -29,33 +31,19 @@
 
     body {
       font-family: 'Manrope', sans-serif;
-      background: linear-gradient(135deg, var(--hot-pink), var(--bright-purple), var(--vibrant-blue), var(--electric-orange), var(--sunshine-yellow), var(--deep-blue));
-      background-size: 1200% 1200%;
-      animation: backgroundShift 25s ease infinite;
+      background: var(--bg-dark);
       color: var(--text-light);
-      padding: 60px 20px;
-      overflow-x: hidden;
+      padding: 60px 24px;
       min-height: 100vh;
-    }
-
-    @keyframes backgroundShift {
-      0% {
-        background-position: 0% 50%;
-      }
-
-      50% {
-        background-position: 100% 50%;
-      }
-
-      100% {
-        background-position: 0% 50%;
-      }
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     header {
       text-align: center;
       margin-bottom: 80px;
-      animation: fadeInUp 1.2s ease forwards;
+      max-width: 900px;
     }
 
     .logo-title {
@@ -71,163 +59,137 @@
       height: 90px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid var(--text-light);
-      box-shadow: 0 0 20px var(--shadow-hot-pink);
+      border: 3px solid var(--hot-pink);
+      box-shadow: 0 0 12px var(--shadow-pink);
       transition: transform 0.3s ease;
     }
 
     .logo:hover {
-      transform: rotate(15deg) scale(1.1);
-      box-shadow: 0 0 35px var(--shadow-hot-pink);
+      transform: scale(1.1);
+      box-shadow: 0 0 24px var(--shadow-pink);
     }
 
     h1 {
-      font-size: 4rem;
-      font-weight: 900;
-      background: linear-gradient(90deg, var(--hot-pink), var(--bright-purple), var(--vibrant-blue));
+      font-weight: 800;
+      font-size: 3.8rem;
+      background: linear-gradient(90deg, var(--hot-pink), var(--soft-purple));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: textGlow 3s ease-in-out infinite alternate;
-      cursor: default;
+      user-select: none;
+      letter-spacing: 2px;
     }
 
     header p {
-      font-size: 1.4rem;
       margin-top: 12px;
+      font-size: 1.3rem;
       font-weight: 600;
-      text-shadow: 0 0 8px var(--shadow-hot-pink);
-      opacity: 0.9;
-      cursor: default;
+      color: var(--warm-orange);
+      opacity: 0.85;
+      user-select: none;
     }
 
-    /* Services */
+    /* Services Section */
     .services {
+      width: 100%;
       max-width: 1200px;
-      margin: 0 auto;
-      animation: fadeInUp 1.6s ease forwards;
+      margin-bottom: 100px;
     }
 
     .services h2 {
       text-align: center;
       font-size: 3rem;
-      color: var(--sunshine-yellow);
-      text-shadow: 0 0 10px var(--electric-orange);
+      color: var(--hot-pink);
       margin-bottom: 60px;
-      letter-spacing: 2px;
-      font-weight: 800;
+      letter-spacing: 1.5px;
+      font-weight: 700;
+      text-transform: uppercase;
+      user-select: none;
     }
 
     .service-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 40px;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 36px;
     }
 
     .service-card {
-      background: linear-gradient(135deg, var(--hot-pink), var(--bright-purple));
-      padding: 35px 30px;
-      border-radius: 25px;
-      box-shadow: 0 12px 25px var(--shadow-hot-pink);
-      color: var(--text-light);
-      position: relative;
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      background: var(--card-bg);
+      border-radius: 20px;
+      padding: 30px 28px;
+      box-shadow: 0 8px 20px rgba(216, 30, 91, 0.15);
+      transition: transform 0.35s ease, box-shadow 0.35s ease;
       cursor: default;
-      overflow: hidden;
     }
 
     .service-card:hover {
-      transform: scale(1.07);
-      box-shadow: 0 18px 45px var(--shadow-purple);
+      transform: translateY(-8px);
+      box-shadow: 0 14px 35px var(--shadow-pink);
     }
 
     .service-card h3 {
-      font-size: 1.9rem;
-      margin-bottom: 18px;
-      letter-spacing: 0.8px;
-      text-shadow: 0 0 10px var(--shadow-hot-pink);
       font-weight: 700;
+      font-size: 1.8rem;
+      margin-bottom: 18px;
+      color: var(--sunny-yellow);
+      user-select: none;
     }
 
     .service-card p {
+      font-weight: 400;
       font-size: 1.1rem;
-      line-height: 1.7;
-      text-shadow: 0 0 6px var(--shadow-hot-pink);
+      line-height: 1.6;
+      color: #eee;
+      user-select: none;
     }
 
-    /* Contact */
+    /* Contact Section */
     .contact {
-      margin-top: 100px;
       text-align: center;
-      animation: fadeInUp 1.8s ease forwards;
+      max-width: 900px;
     }
 
     .contact h2 {
       font-size: 2.8rem;
-      color: var(--vibrant-blue);
-      text-shadow: 0 0 10px var(--shadow-blue);
-      margin-bottom: 35px;
-      font-weight: 800;
-      letter-spacing: 1.5px;
+      font-weight: 700;
+      color: var(--cool-blue);
+      margin-bottom: 40px;
+      user-select: none;
     }
 
     .contact-links {
       display: flex;
       justify-content: center;
-      gap: 30px;
+      gap: 28px;
       flex-wrap: wrap;
     }
 
     .contact-links a {
-      background: var(--electric-orange);
+      background: var(--hot-pink);
       color: var(--text-light);
-      padding: 16px 40px;
-      border-radius: 50px;
+      padding: 16px 44px;
+      border-radius: 40px;
       font-weight: 700;
       font-size: 1.2rem;
       text-decoration: none;
-      box-shadow: 0 6px 15px rgba(255, 111, 0, 0.6);
-      transition: background 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-      overflow: hidden;
+      box-shadow: 0 5px 18px var(--shadow-pink);
+      transition: background 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+      user-select: none;
     }
 
     .contact-links a:hover {
-      background: var(--sunshine-yellow);
-      color: var(--hot-pink);
-      box-shadow: 0 8px 25px rgba(255, 234, 0, 0.9);
+      background: var(--soft-purple);
+      color: var(--sunny-yellow);
+      box-shadow: 0 8px 28px var(--shadow-purple);
     }
 
     footer {
       margin-top: 100px;
-      text-align: center;
       font-size: 1rem;
-      color: var(--sunshine-yellow);
-      text-shadow: 0 0 7px var(--electric-orange);
+      color: var(--warm-orange);
       font-weight: 600;
       letter-spacing: 1px;
-    }
-
-    /* Animations */
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes textGlow {
-      0% {
-        text-shadow: 0 0 15px var(--hot-pink), 0 0 25px var(--hot-pink);
-      }
-
-      100% {
-        text-shadow: 0 0 35px var(--bright-purple), 0 0 50px var(--vibrant-blue);
-      }
+      text-align: center;
+      user-select: none;
     }
 
     /* Responsive */
@@ -241,16 +203,12 @@
         height: 70px;
       }
 
-      .service-grid {
-        grid-template-columns: 1fr;
-      }
-
       .services h2 {
         font-size: 2.4rem;
       }
 
       .contact h2 {
-        font-size: 2rem;
+        font-size: 2.2rem;
       }
 
       .contact-links a {
@@ -262,7 +220,6 @@
 </head>
 
 <body>
-  <!-- Header -->
   <header>
     <div class="logo-title">
       <img src="https://i.imgur.com/FXNRead.png" alt="Digitala Logo" class="logo" />
@@ -273,7 +230,6 @@
     </div>
   </header>
 
-  <!-- Services -->
   <section class="services">
     <h2>My Services</h2>
     <div class="service-grid">
@@ -307,7 +263,6 @@
     </div>
   </section>
 
-  <!-- Contact -->
   <section class="contact">
     <h2>Get in Touch</h2>
     <div class="contact-links">
